--- a/templates/app1/shop.html
+++ b/templates/app1/shop.html
@@ -28,7 +28,7 @@
                         <div class="row">
                             <div class="col-lg-2 col-md-4 mb-lg-0 mb-md-5 mb-sm-5">
                                 <h5 class="mb-20">Categories</h5>
-                                <ul class="categor-list">
+                                <!-- <ul class="categor-list">
                                     <li class="cat-item text-muted"><a href="shop-grid-right.html">Jacket</a>(125)</li>
                                     <li class="cat-item text-muted"><a href="shop-grid-right.html">Jeans</a>(68)</li>
                                     <li class="cat-item text-muted"><a href="shop-grid-right.html">Sweatshirts</a>(284)</li>
@@ -36,9 +36,9 @@
                                     <li class="cat-item text-muted"><a href="shop-grid-right.html">Kitwears</a>(152)</li>
                                     <li class="cat-item text-muted"><a href="shop-grid-right.html">Sportswear</a>(302)</li>
                                     <li class="cat-item text-muted"><a href="shop-grid-right.html">Accessories</a>(168)</li>
-                                </ul>
+                                </ul> -->
                             </div>
-                            <div class="col-lg-2 col-md-4 mb-lg-0 mb-md-5 mb-sm-5">
+                            <!-- <div class="col-lg-2 col-md-4 mb-lg-0 mb-md-5 mb-sm-5">
                                 <h5 class="mb-20">Manufacturers</h5>
                                 <ul class="categor-list">
                                     <li class="cat-item text-muted"><a href="shop-grid-right.html">Adidas</a>(125)</li>
@@ -49,8 +49,8 @@
                                     <li class="cat-item text-muted"><a href="shop-grid-right.html">Bootstrap</a>(32)</li>
                                     <li class="cat-item text-muted"><a href="shop-grid-right.html">Helixx</a>(312)</li>
                                 </ul>
-                            </div>
-                            <div class="col-lg-2 col-md-4 mb-lg-0 mb-md-5 mb-sm-5">
+                            </div> -->
+                            <!-- <div class="col-lg-2 col-md-4 mb-lg-0 mb-md-5 mb-sm-5">
                                 <h5 class="mb-20">Price range</h5>
                                 <ul class="categor-list">
                                     <li class="cat-item text-muted"><a href="shop-grid-right.html">All</a></li>
@@ -61,8 +61,8 @@
                                     <li class="cat-item text-muted"><a href="shop-grid-right.html">$80.00 - $100.00 </a></li>
                                     <li class="cat-item text-muted"><a href="shop-grid-right.html">$100.00 - $200.00 </a></li>
                                 </ul>
-                            </div>
-                            <div class="col-lg-2 col-md-4 mb-lg-0 mb-md-5 mb-sm-5">
+                            </div> -->
+                            <!-- <div class="col-lg-2 col-md-4 mb-lg-0 mb-md-5 mb-sm-5">
                                 <h5 class="mb-20">By Tags</h5>
                                 <ul class="categor-list">
                                     <li class="cat-item text-muted"><a href="shop-grid-right.html">Cloth</a>(124)</li>
@@ -72,8 +72,8 @@
                                     <li class="cat-item text-muted"><a href="shop-grid-right.html">Dress</a>(455)</li>
                                     <li class="cat-item text-muted"><a href="shop-grid-right.html">Trending</a>(1553)</li>
                                 </ul>
-                            </div>
-                            <div class="col-lg-2 col-md-4 mb-lg-0 mb-md-5 mb-sm-5">
+                            </div> -->
+                            <!-- <div class="col-lg-2 col-md-4 mb-lg-0 mb-md-5 mb-sm-5">
                                 <h5 class="mb-20">By Color</h5>
                                 <ul class="list-filter color-filter">
                                     <li><a href="#" data-color="Red"><span class="product-color-red"></span></a></li>
@@ -92,8 +92,8 @@
                                     <li><a href="#">XL</a></li>
                                     <li><a href="#">XXL</a></li>
                                 </ul>
-                            </div>
-                            <div class="col-lg-2 col-md-4 mb-lg-0 mb-md-5 mb-sm-5">
+                            </div> -->
+                            <!-- <div class="col-lg-2 col-md-4 mb-lg-0 mb-md-5 mb-sm-5">
                                 <h5 class="mb-20">By Review</h5>
                                 <div class="product-rate-cover">
                                     <div class="product-rate d-inline-block">
@@ -130,7 +130,7 @@
                                     </div>
                                     <span class="font-small ml-5 text-muted"> (25)</span>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
