--- a/templates/app1/product-detail.html
+++ b/templates/app1/product-detail.html
@@ -232,9 +232,9 @@
                                     </div>
                                     <div class="product_sort_info font-xs mb-30">
                                         <ul>
-                                            <li class="mb-10"><i class="fi-rs-crown mr-5"></i> 1 Year AL Jazeera Brand Warranty</li>
-                                            <li class="mb-10"><i class="fi-rs-refresh mr-5"></i> 30 Day Return Policy</li>
-                                            <li><i class="fi-rs-credit-card mr-5"></i> Cash on Delivery available</li>
+                                            <li class="mb-10"><i class="fi-rs-crown mr-5"></i> 1 Year  Brand Warranty</li>
+                                            <li class="mb-10"><i class="fi-rs-refresh mr-5"></i> 10 Days Return Policy</li>
+                                            <li><i class="fi-rs-credit-card mr-5"></i> {{product.description}}</li>
                                         </ul>
                                     </div>
                                     <div class="col-6 sizes mt-5 ps-3">
@@ -294,20 +294,17 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-10 m-auto entry-main-content">
-                                <h2 class="section-title style-1 mb-30">Description</h2>
+                                <h2 class="section-title style-1 mb-30">{{product.description}}</h2>
                                 <div class="description mb-50">
-                                    <p>Uninhibited carnally hired played in whimpered dear gorilla koala depending and much yikes off far quetzal goodness and from for grimaced goodness unaccountably and meadowlark near unblushingly crucial scallop
-                                        tightly neurotic hungrily some and dear furiously this apart.</p>
-                                    <p>Spluttered narrowly yikes left moth in yikes bowed this that grizzly much hello on spoon-fed that alas rethought much decently richly and wow against the frequent fluidly at formidable acceptably flapped
-                                        besides and much circa far over the bucolically hey precarious goldfinch mastodon goodness gnashed a jellyfish and one however because.
-                                    </p>
-                                    <ul class="product-more-infor mt-30">
+                                    <p>{{product.description}}.</p>
+                                    
+                                    <!-- <ul class="product-more-infor mt-30">
                                         <li><span>Type Of Packing</span> Bottle</li>
                                         <li><span>Color</span> Green, Pink, Powder Blue, Purple</li>
                                         <li><span>Quantity Per Case</span> 100ml</li>
                                         <li><span>Ethyl Alcohol</span> 70%</li>
                                         <li><span>Piece In One</span> Carton</li>
-                                    </ul>
+                                    </ul> -->
                                     <hr class="wp-block-separator is-style-dots">
                                     <p>Laconic overheard dear woodchuck wow this outrageously taut beaver hey hello far meadowlark imitatively egregiously hugged that yikes minimally unanimous pouted flirtatiously as beaver beheld above forward
                                         energetic across this jeepers beneficently cockily less a the raucously that magic upheld far so the this where crud then below after jeez enchanting drunkenly more much wow callously irrespective limpet.</p>
@@ -321,8 +318,8 @@
                                         dachshund.
                                     </p>
                                 </div>
-                                <h3 class="section-title style-1 mb-30">Additional info</h3>
-                                <table class="font-md mb-30">
+                                <!-- <h3 class="section-title style-1 mb-30">Additional info</h3> -->
+                                <!-- <table class="font-md mb-30">
                                     <tbody>
                                         <tr class="stand-up">
                                             <th>Stand Up</th>
@@ -409,7 +406,7 @@
                                             </td>
                                         </tr>
                                     </tbody>
-                                </table>
+                                </table> -->
                                 <div class="social-icons single-share">
                                     <ul class="text-grey-5 d-inline-block">
                                         <li><strong class="mr-10">Share this:</strong></li>
@@ -484,7 +481,7 @@
                                                                 <div class="product-rating" style="width:90%">
                                                                 </div>
                                                             </div>
-                                                            <p>Authentic and Beautiful, Love these way more than ever expected They are Great earphones</p>
+                                                            <p>Authentic and Beautiful,  They are Great earphones</p>
                                                             <div class="d-flex justify-content-between">
                                                                 <div class="d-flex align-items-center">
                                                                     <p class="font-xs mr-30">December 4, 2020 at 3:12 pm </p>
@@ -571,10 +568,10 @@
                             </div>
                         </div>
                         <div class="row mt-60">
-                            <div class="col-12">
+                            <!-- <div class="col-12">
                                 <h3 class="section-title style-1 mb-30">Related products</h3>
-                            </div>
-                            <div class="col-12">
+                            </div> -->
+                            <!-- <div class="col-12">
                                 <div class="row related-products">
                                     <div class="col-lg-3 col-md-4 col-12 col-sm-6">
                                         <div class="product-cart-wrap small hover-up">
@@ -627,7 +624,7 @@
                                                     <span class="sale">-12%</span>
                                                 </div>
                                             </div>
-                                            <div class="product-content-wrap">
+                                            <!-- <div class="product-content-wrap">
                                                 <h2><a href="shop-product-right.html" tabindex="0">Smart Bluetooth Speaker</a></h2>
                                                 <div class="rating-result" title="90%">
                                                     <span>
@@ -637,8 +634,8 @@
                                                     <span>$138.85 </span>
                                                     <span class="old-price">$145.8</span>
                                                 </div>
-                                            </div>
-                                        </div>
+                                            </div> -->
+                                        <!-- </div>
                                     </div>
                                     <div class="col-lg-3 col-md-4 col-12 col-sm-6">
                                         <div class="product-cart-wrap small hover-up">
@@ -705,15 +702,15 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> --> -->
                         </div>
-                        <div class="banner-img banner-big wow fadeIn f-none animated mt-50">
+                        <!-- <div class="banner-img banner-big wow fadeIn f-none animated mt-50">
                             <img class="border-radius-10" src="{% static 'assets/imgs/banner/banner-4.png' %}" alt="">
                             <div class="banner-text">
                                 <h4 class="mb-15 mt-40">Repair Services</h4>
                                 <h2 class="fw-600 mb-20">We're an Apple <br>Authorised Service Provider</h2>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
