--- a/templates/app1/product_list.html
+++ b/templates/app1/product_list.html
@@ -34,7 +34,7 @@
                                     </ul>
                                     {% endfor %}
                                 </div>
-                                <div class="col-lg-2 col-md-4 mb-lg-0 mb-md-5 mb-sm-5">
+                                <!-- <div class="col-lg-2 col-md-4 mb-lg-0 mb-md-5 mb-sm-5">
                                     <h5 class="mb-20">Manufacturers</h5>
                                     <ul class="categor-list">
                                         <li class="cat-item text-muted"><a href="shop-grid-right.html">Adidas</a>(125)</li>
@@ -45,8 +45,8 @@
                                         <li class="cat-item text-muted"><a href="shop-grid-right.html">Bootstrap</a>(32)</li>
                                         <li class="cat-item text-muted"><a href="shop-grid-right.html">Helixx</a>(312)</li>
                                     </ul>
-                                </div>
-                                <div class="col-lg-2 col-md-4 mb-lg-0 mb-md-5 mb-sm-5">
+                                </div> -->
+                                <!-- <div class="col-lg-2 col-md-4 mb-lg-0 mb-md-5 mb-sm-5">
                                     <h5 class="mb-20">Price range</h5>
                                     <ul class="categor-list">
                                         <li class="cat-item text-muted"><a href="shop-grid-right.html">All</a></li>
@@ -57,8 +57,8 @@
                                         <li class="cat-item text-muted"><a href="shop-grid-right.html">$80.00 - $100.00 </a></li>
                                         <li class="cat-item text-muted"><a href="shop-grid-right.html">$100.00 - $200.00 </a></li>
                                     </ul>
-                                </div>
-                                <div class="col-lg-2 col-md-4 mb-lg-0 mb-md-5 mb-sm-5">
+                                </div> -->
+                                <!-- <div class="col-lg-2 col-md-4 mb-lg-0 mb-md-5 mb-sm-5">
                                     <h5 class="mb-20">By Tags</h5>
                                     <ul class="categor-list">
                                         <li class="cat-item text-muted"><a href="shop-grid-right.html">Cloth</a>(124)</li>
@@ -68,8 +68,8 @@
                                         <li class="cat-item text-muted"><a href="shop-grid-right.html">Dress</a>(455)</li>
                                         <li class="cat-item text-muted"><a href="shop-grid-right.html">Trending</a>(1553)</li>
                                     </ul>
-                                </div>
-                                <div class="col-lg-2 col-md-4 mb-lg-0 mb-md-5 mb-sm-5">
+                                </div> -->
+                                <!-- <div class="col-lg-2 col-md-4 mb-lg-0 mb-md-5 mb-sm-5">
                                     <h5 class="mb-20">By Color</h5>
                                     <ul class="list-filter color-filter">
                                         <li><a href="#" data-color="Red"><span class="product-color-red"></span></a></li>
@@ -88,8 +88,8 @@
                                         <li><a href="#">XL</a></li>
                                         <li><a href="#">XXL</a></li>
                                     </ul>
-                                </div>
-                                <div class="col-lg-2 col-md-4 mb-lg-0 mb-md-5 mb-sm-5">
+                                </div> -->
+                                <!-- <div class="col-lg-2 col-md-4 mb-lg-0 mb-md-5 mb-sm-5">
                                     <h5 class="mb-20">By Review</h5>
                                     <div class="product-rate-cover">
                                         <div class="product-rate d-inline-block">
@@ -126,14 +126,14 @@
                                         </div>
                                         <span class="font-small ml-5 text-muted"> (25)</span>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-12">
                         <div class="shop-product-fillter">
                             <div class="totall-product">
-                                <p> We found <strong class="text-brand">688</strong> items for you!</p>
+                                <!-- <p> We found <strong class="text-brand">688</strong> items for you!</p> -->
                             </div> -->
                             <div class="sort-by-product-area">
                                 <div class="sort-by-cover mr-10">
@@ -142,10 +142,10 @@
                                             <span><i class="fi-rs-apps"></i>Show:</span>
                                         </div>
                                         <div class="sort-by-dropdown-wrap">
-                                            <span> 50 <i class="fi-rs-angle-small-down"></i></span>
+                                            <span>1 {{product.count}} <i class="fi-rs-angle-small-down"></i></span>
                                         </div>
                                     </div>
-                                    <div class="sort-by-dropdown">
+                                    <!-- <div class="sort-by-dropdown">
                                         <ul>
                                             <li><a class="active" href="#">50</a></li>
                                             <li><a href="#">100</a></li>
@@ -153,7 +153,7 @@
                                             <li><a href="#">200</a></li>
                                             <li><a href="#">All</a></li>
                                         </ul>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="sort-by-cover">
                                     <div class="sort-by-product-wrap">
@@ -188,9 +188,9 @@
                                             </a>
                                         </div>
                                         <div class="product-action-1">
-                                            <a aria-label="Quick view" class="action-btn hover-up" data-bs-toggle="modal" data-bs-target="#quickViewModal"><i class="fi-rs-eye"></i></a>
+                                            <!-- <a aria-label="Quick view" class="action-btn hover-up" data-bs-toggle="modal" data-bs-target="#quickViewModal"><i class="fi-rs-eye"></i></a> -->
                                             <a aria-label="Add To Wishlist" class="action-btn hover-up" href="shop-wishlist.html"><i class="fi-rs-heart"></i></a>
-                                            <a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html"><i class="fi-rs-shuffle"></i></a>
+                                            <!-- <a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html"><i class="fi-rs-shuffle"></i></a> -->
                                         </div>
                                         {% if discount_offer is not None and discount_offer.active %}
                                         <div class="product-badges product-badges-position product-badges-mrg">
